Jeu et test réalisé + JavaDoc au complet